--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="col-md-12 col-lg-6 col-sm-12">
                     <div class="card">
                         <div class="card-body">
-                            <h3 class="card-title">Popcorn acts as an anti aging agent.</h3>
+                            <h3 class="card-title">Acts as an anti aging agent.</h3>
                             <p>Popcorn acts as anti aging agent.They have been closely linked to age-related symptoms like wrinkles, age spots, macular degeneration, muscle weakness, osteoporosis, hair loss, and a wide variety of other things which becomes prominent with aging. Popcorn can make a person feel healthy and happy well into their old age because of the powerful antioxidants that combat these effects of free radicals.</p>
                         </div>
                     </div>
@@ -77,7 +77,7 @@
                 <div class="col-md-12 col-lg-6 col-sm-12">
                     <div class="card">
                         <div class="card-body">
-                            <h3 class="card-title">Popcorn helps with blood sugar.</h3>
+                            <h3 class="card-title">Helps with blood sugar.</h3>
                             <p>Dietary fiber has an impact on blood sugar levels. When the body has ample amounts of fiber, it regulates the release and management of blood sugar levels better than people with low levels of fiber. Reduction of these fluctuations in blood sugar is a major bonus.</p>
                         </div>
                     </div>
@@ -86,7 +86,7 @@
                 <div class="col-md-12 col-lg-6 col-sm-12">
                     <div class="card">
                         <div class="card-body">
-                            <h3 class="card-title">Popcorn combats tumour cells.</h3>
+                            <h3 class="card-title">Potentially combats tumour cells.</h3>
                             <p>Popcorn contains ferulic acid, which is linked to potentially killing certain kinds of tumor cells.</p>
                         </div>
                     </div>
@@ -95,7 +95,7 @@
                 <div class="col-md-12 col-lg-6 col-sm-12">
                     <div class="card">
                         <div class="card-body">
-                            <h3 class="card-title">Popcorn helps to reduce depression.</h3>
+                            <h3 class="card-title">Helps to reduce depression.</h3>
                             <p>Vitamin B3 present in Popcorn, also known as niacin, has been studied for its potential to help naturally ease depression, making popcorn a “comfort food” in the literal sense.</p>
                         </div>
                     </div>
@@ -104,7 +104,7 @@
                 <div class="col-md-12 col-lg-6 col-sm-12">
                     <div class="card">
                         <div class="card-body">
-                            <h3 class="card-title">Popcorn supports healthy bones.</h3>
+                            <h3 class="card-title">Supports healthy bones.</h3>
                             <p>Popcorn contains phosphorus, a mineral that aids in supporting healthy bone function, as well as the function of many types of cells throughout the body. Manganese is another mineral found in popcorn which also support healthy bones.</p>
                         </div>
                     </div>
@@ -113,7 +113,7 @@
                 <div class="col-md-12 col-lg-6 col-sm-12">
                     <div class="card">
                         <div class="card-body">
-                            <h3 class="card-title">Popcorn helps with digestion</h3>
+                            <h3 class="card-title">Helps with digestion</h3>
                             <p>Popcorn is high in dietary fiber, which helps with digestive regularity, keeps a feeling of fullness throughout the day, is crucial for a healthy heart, and may even help to protect against colon cancer. Because of its high fiber content, eating popcorn may help to promote healthy gut bacteria which are essential for not only digestion but also for a healthy immune system.</p>
                         </div>
                     </div>
